test/libsolidity/syntaxTests/inlineAssembly/invalid/push_disallowed.sol
contract C {
    function f() pure public {
        assembly {
            push0()
            push1()
            push2()
            push3()
            push4()
            push5()
            push6()
            push7()
            push8()
            push9()
            push10()
            push11()
            push12()
            push13()
            push14()
            push15()
            push16()
            push17()
            push18()
            push19()
            push20()
            push21()
            push22()
            push23()
            push24()
            push25()
            push26()
            push27()
            push28()
            push29()
            push30()
            push31()
            push32()
        }
    }
}
// ----
// DeclarationError 4619: (75-80='push0'): Function "push0" not found.
// DeclarationError 4619: (95-100='push1'): Function "push1" not found.
// DeclarationError 4619: (115-120='push2'): Function "push2" not found.
// DeclarationError 4619: (135-140='push3'): Function "push3" not found.
// DeclarationError 4619: (155-160='push4'): Function "push4" not found.
// DeclarationError 4619: (175-180='push5'): Function "push5" not found.
// DeclarationError 4619: (195-200='push6'): Function "push6" not found.
// DeclarationError 4619: (215-220='push7'): Function "push7" not found.
// DeclarationError 4619: (235-240='push8'): Function "push8" not found.
// DeclarationError 4619: (255-260='push9'): Function "push9" not found.
// DeclarationError 4619: (275-281='push10'): Function "push10" not found.
// DeclarationError 4619: (296-302='push11'): Function "push11" not found.
// DeclarationError 4619: (317-323='push12'): Function "push12" not found.
// DeclarationError 4619: (338-344='push13'): Function "push13" not found.
// DeclarationError 4619: (359-365='push14'): Function "push14" not found.
// DeclarationError 4619: (380-386='push15'): Function "push15" not found.
// DeclarationError 4619: (401-407='push16'): Function "push16" not found.
// DeclarationError 4619: (422-428='push17'): Function "push17" not found.
// DeclarationError 4619: (443-449='push18'): Function "push18" not found.
// DeclarationError 4619: (464-470='push19'): Function "push19" not found.
// DeclarationError 4619: (485-491='push20'): Function "push20" not found.
// DeclarationError 4619: (506-512='push21'): Function "push21" not found.
// DeclarationError 4619: (527-533='push22'): Function "push22" not found.
// DeclarationError 4619: (548-554='push23'): Function "push23" not found.
// DeclarationError 4619: (569-575='push24'): Function "push24" not found.
// DeclarationError 4619: (590-596='push25'): Function "push25" not found.
// DeclarationError 4619: (611-617='push26'): Function "push26" not found.
// DeclarationError 4619: (632-638='push27'): Function "push27" not found.
// DeclarationError 4619: (653-659='push28'): Function "push28" not found.
// DeclarationError 4619: (674-680='push29'): Function "push29" not found.
// DeclarationError 4619: (695-701='push30'): Function "push30" not found.
// DeclarationError 4619: (716-722='push31'): Function "push31" not found.
// DeclarationError 4619: (737-743='push32'): Function "push32" not found.
